k8s/mafl/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mafl
spec:
  selector:
    app: mafl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
