k8s/mafl/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mafl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mafl
                port:
                  number: 8080
